--- a/01. Exploring Spark SQL/06 .Drawbacks of Cloud Storage.ipynb
+++ b/01. Exploring Spark SQL/06 .Drawbacks of Cloud Storage.ipynb
@@ -6,7 +6,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "3e1d1cfd-7646-4cf1-8842-995e80e8ff26",
+     "nuid": "5bcd677a-3092-48c3-8704-7f8a7f898206",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -17,6 +17,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d09da643-c0b8-42aa-9df0-ee00b1927829",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Load users_001.csv into DataFrame "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -26,7 +42,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "6095343c-ad75-4e13-b8dd-41367918badb",
+     "nuid": "85c05e1d-119d-471e-b49e-e25561aff8ff",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -34,13 +50,13 @@
    },
    "outputs": [],
    "source": [
-    "#loading emplyoee csv\n",
-    "df = spark.read.csv(path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/employee.csv\",\n",
-    "                    sep=\"|\",\n",
-    "                    inferSchema=True,\n",
-    "                    header=True,\n",
-    "                    quote=\"'\") #quote is used to escape the quotes in the address column\n",
-    "display(df)    "
+    "df = spark.read.csv(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/user_dataset/users_001.csv\",\n",
+    "    header=True,\n",
+    "    inferSchema=True,\n",
+    ")\n",
+    "df.display()\n",
+    " "
    ]
   },
   {
@@ -49,15 +65,14 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "4e732ad1-c0b2-4478-acec-70d717585e29",
+     "nuid": "d3687293-bf4a-4d8d-8835-8960d717564b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "source": [
-    "# Dropping Missing Record\n",
-    "We have to deal with missing record by dropping and filling "
+    "## Write into the Parquet Format"
    ]
   },
   {
@@ -70,7 +85,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "8b2ccfb5-0627-4b8a-87a4-4c27b413ec48",
+     "nuid": "b2af654c-49bd-4039-984c-49a2472c9473",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -78,9 +93,29 @@
    },
    "outputs": [],
    "source": [
-    "#dropna will drop entire record if any one of the column is null\n",
-    "\n",
-    "df.na.drop().display()"
+    "df.write.format(\"parquet\").save(\n",
+    "    \"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_parquet\",\n",
+    "    mode=\"overwrite\",\n",
+    ")\n",
+    "spark.read.parquet(\n",
+    "    \"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_parquet\"\n",
+    ").display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "29ed6214-66cd-4e15-a834-b1776e59b5a1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# Create a View"
    ]
   },
   {
@@ -93,7 +128,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "dbdf2112-bcd0-438b-b5bd-0428158f99ae",
+     "nuid": "4f7f1d84-9b70-4a7d-af45-f13b5b2e69bc",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -101,9 +136,7 @@
    },
    "outputs": [],
    "source": [
-    "#to drop specific column \n",
-    "\n",
-    "df.na.drop(subset=[\"name\"]).display()"
+    "df_parquet= spark.read.parquet(\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_parquet\")"
    ]
   },
   {
@@ -116,7 +149,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "ad8cc70d-de8c-4360-b9e3-fd1cbeb9a93a",
+     "nuid": "3fee5303-ebcb-42db-bfc3-92dde69b8d97",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -124,11 +157,65 @@
    },
    "outputs": [],
    "source": [
-    "# to drop two specific column\n",
-    "\n",
-    "df.na.drop(\n",
-    "    subset=[\"name\", \"id\"]\n",
-    ").display()  # if any one of the column either id or name is null, it will drop the record"
+    "df_parquet.createOrReplaceTempView(\"users_vw\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d1b0410f-ec4c-45bf-bfd9-d7610cee2372",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Disadvantage -  Update is not allowed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a2f4259c-1e25-467e-9378-02899b5797e4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    " \n",
+    "UPDATE users_vw\n",
+    "SET country = 'Bharat'\n",
+    "where country = 'India'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "37bd2b1c-b6a0-476a-8418-31ac90c2be92",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Disadvantage - No support for ROLLBACK"
    ]
   },
   {
@@ -141,7 +228,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "5bf562ab-8134-4ce9-bd57-67e9445522d0",
+     "nuid": "106456fe-16d1-4e36-852a-08e4a8e53c2e",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -149,123 +236,29 @@
    },
    "outputs": [],
    "source": [
-    "#another approach to drop two columns\n",
-    "\n",
+    "df_parquet.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "403bc076-e2b0-4b08-9448-fe83de31e62c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "from pyspark.sql.functions import col\n",
-    "df.filter((col(\"id\").isNotNull()) & (col(\"name\").isNotNull())).display()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "bbb8f389-e25d-48eb-946c-38e51ebdc056",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## Filling Missing Values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "06ecb56c-02a9-4123-ac38-5f27ebb77c75",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df.na.fill(0).display() #since we have used integer value 0 here, it will fill integer column with 0 for missing values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "2b88d148-b7da-4d8d-a297-4df8384651a3",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df.na.fill(0).na.fill(\"NULL IN SOURCE\").display() #NULL IN SOURCE used for string columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "c5310331-6cf7-4f37-a8ae-ccbac81d5b70",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#to replace missing columns we can use dictionary like below:\n",
-    "\n",
-    "df.na.fill({\n",
-    "    \"id\":-1,\n",
-    "    \"exp\":0,\n",
-    "    \"gen\":\"NA\"\n",
-    "}).display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "2ae2f597-d18f-493a-aede-dce2da0c0d5f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from pyspark.sql.functions import avg\n",
-    "mean = df.select(avg(\"exp\")).collect()[0][0]\n",
-    "df.na.fill({\n",
-    "    \"id\":-1,\n",
-    "    \"exp\":int(mean),\n",
-    "    \"gen\":\"NA\"\n",
-    "}).display()"
+    "df.filter(col(\"Country\")==\"India\".write.mode(\"overwrite\").format(\"parquet\").save(\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_parquet_01\"))"
    ]
   }
  ],
@@ -280,9 +273,15 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 8673240370433245,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
-   "notebookName": "03. Data Cleansing and Manipulation",
+   "notebookName": "06 .Drawbacks of Cloud Storage",
    "widgets": {}
   },
   "language_info": {
