--- a/01. Exploring Spark SQL/07. DataLake Creation and Understandimg Transactions.ipynb
+++ b/01. Exploring Spark SQL/07. DataLake Creation and Understandimg Transactions.ipynb
@@ -6,14 +6,14 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "3e1d1cfd-7646-4cf1-8842-995e80e8ff26",
+     "nuid": "9f4ea3de-7115-43c3-a89d-cf528ac1a169",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "source": [
-    "# Prerequisites"
+    "# Load 'users_001.csv' into DataFrame"
    ]
   },
   {
@@ -26,7 +26,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "6095343c-ad75-4e13-b8dd-41367918badb",
+     "nuid": "8e8c6f8b-fd3b-448e-b637-179667631629",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -34,13 +34,13 @@
    },
    "outputs": [],
    "source": [
-    "#loading emplyoee csv\n",
-    "df = spark.read.csv(path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/employee.csv\",\n",
-    "                    sep=\"|\",\n",
-    "                    inferSchema=True,\n",
-    "                    header=True,\n",
-    "                    quote=\"'\") #quote is used to escape the quotes in the address column\n",
-    "display(df)    "
+    "df = spark.read.csv(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/user_dataset/users_001.csv\",\n",
+    "    header=True,\n",
+    "    inferSchema=True,\n",
+    ")\n",
+    "df.display()\n",
+    " "
    ]
   },
   {
@@ -49,15 +49,14 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "4e732ad1-c0b2-4478-acec-70d717585e29",
+     "nuid": "6f448184-f885-4f1f-900d-4817e2438c2a",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "source": [
-    "# Dropping Missing Record\n",
-    "We have to deal with missing record by dropping and filling "
+    "## Tansaction 01 - Write data as a Delta Format"
    ]
   },
   {
@@ -70,7 +69,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "8b2ccfb5-0627-4b8a-87a4-4c27b413ec48",
+     "nuid": "f607ab1c-96ac-4400-b5f1-f3fc090fcb9c",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -78,9 +77,24 @@
    },
    "outputs": [],
    "source": [
-    "#dropna will drop entire record if any one of the column is null\n",
-    "\n",
-    "df.na.drop().display()"
+    "df.write.format(\"delta\").save(\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_delta\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "409f22f8-e876-47a2-85c6-fa53dacea515",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Tansaction 02 - Overwrite \n",
+    "here it will not overwrite the data by deleting old data instead it will add the new data without affecting old data\n"
    ]
   },
   {
@@ -93,7 +107,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "dbdf2112-bcd0-438b-b5bd-0428158f99ae",
+     "nuid": "71afaf65-95bd-4906-b108-0156abab91d5",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -101,9 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "#to drop specific column \n",
-    "\n",
-    "df.na.drop(subset=[\"name\"]).display()"
+    "df.write.format(\"delta\").save(\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_delta_new\")"
    ]
   },
   {
@@ -116,7 +128,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "ad8cc70d-de8c-4360-b9e3-fd1cbeb9a93a",
+     "nuid": "10519285-f86b-4a73-a8bd-c00e06496423",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -124,11 +136,9 @@
    },
    "outputs": [],
    "source": [
-    "# to drop two specific column\n",
+    "#here the output_delta_new consists of both country i,e United States and India\n",
     "\n",
-    "df.na.drop(\n",
-    "    subset=[\"name\", \"id\"]\n",
-    ").display()  # if any one of the column either id or name is null, it will drop the record"
+    "spark.read.load(\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_delta_new\").display()"
    ]
   },
   {
@@ -141,7 +151,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "5bf562ab-8134-4ce9-bd57-67e9445522d0",
+     "nuid": "a2384b87-0a94-4118-81e2-fe03a0701dbb",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -149,11 +159,9 @@
    },
    "outputs": [],
    "source": [
-    "#another approach to drop two columns\n",
-    "\n",
+    "#here the output_delta_new consists of country i,e India\n",
     "from pyspark.sql.functions import col\n",
-    "df.filter((col(\"id\").isNotNull()) & (col(\"name\").isNotNull())).display()\n",
-    "\n"
+    "df.filter(col(\"country\")==\"India\").write.save(\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_delta\",mode=\"overwrite\")\n"
    ]
   },
   {
@@ -162,14 +170,14 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "bbb8f389-e25d-48eb-946c-38e51ebdc056",
+     "nuid": "11f50376-9c33-4415-8946-3627c70add3f",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "source": [
-    "## Filling Missing Values"
+    "## Maintains Versioning (Advanatge)"
    ]
   },
   {
@@ -182,7 +190,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "06ecb56c-02a9-4123-ac38-5f27ebb77c75",
+     "nuid": "3ab3f8d3-4367-4cda-b8c8-ae2a67cdf1cc",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -190,7 +198,7 @@
    },
    "outputs": [],
    "source": [
-    "df.na.fill(0).display() #since we have used integer value 0 here, it will fill integer column with 0 for missing values"
+    "spark.read.option(\"versionAsof\", 0).load(\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_delta_new\").display()"
    ]
   },
   {
@@ -203,7 +211,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "2b88d148-b7da-4d8d-a297-4df8384651a3",
+     "nuid": "e248c458-74c8-495e-8db5-77bdda9c17a9",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -211,7 +219,26 @@
    },
    "outputs": [],
    "source": [
-    "df.na.fill(0).na.fill(\"NULL IN SOURCE\").display() #NULL IN SOURCE used for string columns"
+    "spark.read.load(\n",
+    "    format=\"text\",\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_delta_new/_delta_log/00000000000000000001.json\",\n",
+    ").display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e094ec87-b183-4ece-9d15-33540e4ab5b9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Approach 02 - to see the latest transaction "
    ]
   },
   {
@@ -224,7 +251,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "c5310331-6cf7-4f37-a8ae-ccbac81d5b70",
+     "nuid": "bfa446a1-369c-4e7f-96c9-8c937f039df4",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -232,13 +259,28 @@
    },
    "outputs": [],
    "source": [
-    "#to replace missing columns we can use dictionary like below:\n",
-    "\n",
-    "df.na.fill({\n",
-    "    \"id\":-1,\n",
-    "    \"exp\":0,\n",
-    "    \"gen\":\"NA\"\n",
-    "}).display()"
+    "from delta.tables import DeltaTable\n",
+    " \n",
+    "delta_table = DeltaTable.forPath(\n",
+    "    spark, \"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_delta_new/\"\n",
+    ")\n",
+    "delta_table.history().display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "928254e1-8629-4a30-9a5c-a7b27b4b25b4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# Transaction 03 - Update is allowed"
    ]
   },
   {
@@ -251,7 +293,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "2ae2f597-d18f-493a-aede-dce2da0c0d5f",
+     "nuid": "a1de6f3d-58c8-4704-98ed-cda0ba58531e",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -259,13 +301,36 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import avg\n",
-    "mean = df.select(avg(\"exp\")).collect()[0][0]\n",
-    "df.na.fill({\n",
-    "    \"id\":-1,\n",
-    "    \"exp\":int(mean),\n",
-    "    \"gen\":\"NA\"\n",
-    "}).display()"
+    "df_delta = spark.read.load(\n",
+    "    \"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_delta_new/\"\n",
+    ")\n",
+    "df_delta.createOrReplaceTempView(\"user_vw\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "732033bd-b837-44c1-b165-c82eb043408f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    " \n",
+    "UPDATE user_vw\n",
+    "SET country='Bharat'\n",
+    "where country='India'"
    ]
   }
  ],
@@ -280,9 +345,15 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 8673240370433266,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
-   "notebookName": "03. Data Cleansing and Manipulation",
+   "notebookName": "07. DataLake Creation and Understandimg Transactions",
    "widgets": {}
   },
   "language_info": {
