--- a/01. Exploring Spark SQL/Schema Enforcement and Evolution.ipynb
+++ b/01. Exploring Spark SQL/Schema Enforcement and Evolution.ipynb
@@ -6,41 +6,14 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "3e1d1cfd-7646-4cf1-8842-995e80e8ff26",
+     "nuid": "52b43231-2d81-4511-8f05-6ecd85b49aed",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "source": [
-    "# Prerequisites"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "6095343c-ad75-4e13-b8dd-41367918badb",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#loading emplyoee csv\n",
-    "df = spark.read.csv(path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/employee.csv\",\n",
-    "                    sep=\"|\",\n",
-    "                    inferSchema=True,\n",
-    "                    header=True,\n",
-    "                    quote=\"'\") #quote is used to escape the quotes in the address column\n",
-    "display(df)    "
+    "# Prerequities"
    ]
   },
   {
@@ -49,15 +22,14 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "4e732ad1-c0b2-4478-acec-70d717585e29",
+     "nuid": "eb09f544-5e01-4493-9c72-6ce70e225ae0",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "source": [
-    "# Dropping Missing Record\n",
-    "We have to deal with missing record by dropping and filling "
+    "# Load CSV to Delta Table"
    ]
   },
   {
@@ -70,7 +42,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "8b2ccfb5-0627-4b8a-87a4-4c27b413ec48",
+     "nuid": "d8c3e1f0-d120-4c4e-b362-5e26a2f08b32",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -78,9 +50,59 @@
    },
    "outputs": [],
    "source": [
-    "#dropna will drop entire record if any one of the column is null\n",
-    "\n",
-    "df.na.drop().display()"
+    "df = spark.read.csv(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/user_dataset/users_001.csv\",\n",
+    "    header=True,\n",
+    "    inferSchema=True,\n",
+    ").write.saveAsTable(\"quickstart_catalog.quickstart_schema.users_new\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e39ccd53-7dd4-4f59-b9b9-86ba185bb82f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    " \n",
+    "DESCRIBE FORMATTED quickstart_catalog.quickstart_schema.users_new;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c56c4b12-0358-4533-9b34-23f419c589e8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    " \n",
+    "SELECT * from quickstart_catalog.quickstart_schema.users_new LIMIT 4;"
    ]
   },
   {
@@ -93,7 +115,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "dbdf2112-bcd0-438b-b5bd-0428158f99ae",
+     "nuid": "92d43989-f19a-44e7-aca8-94ec6ec54c33",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -101,9 +123,11 @@
    },
    "outputs": [],
    "source": [
-    "#to drop specific column \n",
-    "\n",
-    "df.na.drop(subset=[\"name\"]).display()"
+    "spark.read.csv(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/user_dataset/users_006_new_column_education.csv\",\n",
+    "    header=True,\n",
+    "    inferSchema=True,\n",
+    ").write.saveAsTable(\"quickstart_catalog.quickstart_schema.users_new\", mode=\"append\")"
    ]
   },
   {
@@ -116,7 +140,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "ad8cc70d-de8c-4360-b9e3-fd1cbeb9a93a",
+     "nuid": "94577d2a-f55c-4f71-9cc0-a1159d48c9fe",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -124,11 +148,28 @@
    },
    "outputs": [],
    "source": [
-    "# to drop two specific column\n",
-    "\n",
-    "df.na.drop(\n",
-    "    subset=[\"name\", \"id\"]\n",
-    ").display()  # if any one of the column either id or name is null, it will drop the record"
+    "spark.read.csv(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/user_dataset/users_006_new_column_education.csv\",\n",
+    "    header=True,\n",
+    "    inferSchema=True,\n",
+    ").write.option(\"mergeSchema\", \"true\").saveAsTable(\n",
+    "    \"quickstart_catalog.quickstart_schema.users_new\", mode=\"append\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "dfe33b5c-c68a-4d6d-b878-122a38f94bd8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Schema Evolution"
    ]
   },
   {
@@ -141,7 +182,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "5bf562ab-8134-4ce9-bd57-67e9445522d0",
+     "nuid": "0be5641d-46b6-4ee9-8b5a-847088b6b9e6",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -149,27 +190,11 @@
    },
    "outputs": [],
    "source": [
-    "#another approach to drop two columns\n",
-    "\n",
     "from pyspark.sql.functions import col\n",
-    "df.filter((col(\"id\").isNotNull()) & (col(\"name\").isNotNull())).display()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "bbb8f389-e25d-48eb-946c-38e51ebdc056",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## Filling Missing Values"
+    " \n",
+    "spark.read.table(\"quickstart_catalog.quickstart_schema.users_new\").filter(\n",
+    "    col(\"id\") <= 4\n",
+    ").limit(4).display()"
    ]
   },
   {
@@ -182,7 +207,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "06ecb56c-02a9-4123-ac38-5f27ebb77c75",
+     "nuid": "7b911df3-6bdc-44fa-990b-39b4f8d674d2",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -190,55 +215,14 @@
    },
    "outputs": [],
    "source": [
-    "df.na.fill(0).display() #since we have used integer value 0 here, it will fill integer column with 0 for missing values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "2b88d148-b7da-4d8d-a297-4df8384651a3",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df.na.fill(0).na.fill(\"NULL IN SOURCE\").display() #NULL IN SOURCE used for string columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "c5310331-6cf7-4f37-a8ae-ccbac81d5b70",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#to replace missing columns we can use dictionary like below:\n",
+    "#loading new CSV\n",
     "\n",
-    "df.na.fill({\n",
-    "    \"id\":-1,\n",
-    "    \"exp\":0,\n",
-    "    \"gen\":\"NA\"\n",
-    "}).display()"
+    "spark.read.csv(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/user_dataset/users_012_less_columns.csv\",\n",
+    "    header=True,\n",
+    "    inferSchema=True,\n",
+    ").write.saveAsTable(\"quickstart_catalog.quickstart_schema.users_new\", mode=\"append\")\n",
+    " "
    ]
   },
   {
@@ -251,7 +235,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "2ae2f597-d18f-493a-aede-dce2da0c0d5f",
+     "nuid": "77cf94b2-ee61-4703-8a6b-bca4433c4e59",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -259,13 +243,15 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import avg\n",
-    "mean = df.select(avg(\"exp\")).collect()[0][0]\n",
-    "df.na.fill({\n",
-    "    \"id\":-1,\n",
-    "    \"exp\":int(mean),\n",
-    "    \"gen\":\"NA\"\n",
-    "}).display()"
+    "#if there is column name mismatch, it will show an error. Hence we are using alisasing names\n",
+    "\n",
+    "spark.read.csv(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/user_dataset/users_013_less_columns_with_different_column_names.csv\",\n",
+    "    header=True,\n",
+    "    inferSchema=True,\n",
+    ").select(col(\"user_id\").alias(\"id\"), col(\"full_name\").alias(\"name\")).write.saveAsTable(\n",
+    "    \"quickstart_catalog.quickstart_schema.users_new\", mode=\"append\"\n",
+    ")"
    ]
   }
  ],
@@ -280,9 +266,15 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 5230900701042945,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
-   "notebookName": "03. Data Cleansing and Manipulation",
+   "notebookName": "Schema Enforcement and Evolution",
    "widgets": {}
   },
   "language_info": {
